--- a/Calculator.html
+++ b/Calculator.html
@@ -14,7 +14,7 @@
     <div class="buttons">
       <div class="btn" onclick="clearxyz()">C</div>
       <div class="btn" onclick="clickingxyz('/')">/</div>
-      <div class="btn" onclick="clickingxyz('')"></div>
+      <div class="btn" onclick="myfunction()"></div>
       <div class="btn" onclick="backxyz()">&larr;</div>
 
       <div class="btn" onclick="clickingxyz('7')">7</div>
